[t2076] Fixed alignment of tray elements

--- a/css/tray-status-bar.less
+++ b/css/tray-status-bar.less
@@ -7,6 +7,7 @@
 @_scrubberBarHeight: 8px;
 @_scrubberHandleHeight: 10px;
 @_traySideWidth: 95px;
+@_timebarRight: 27px;
 
 /*********************************************************
 * Butter Status Area - The top bar in the tray
@@ -37,7 +38,7 @@
   position: absolute;
   left: @_traySideWidth + 10px;
   top: ( @_mediaStatusContainerHeight - @_scrubberBarHeight ) / 2;
-  right: 35px;
+  right: @_timebarRight;
   height: @_scrubberBarHeight;
 }
 
